...
@Composable
fun InfoSection(profile: Profile, tagsViewModel: TagsViewModel) {
  val userTags =
      profile.tags.map { tagString -> Pair(tagString, tagsViewModel.tagToColor(tagString)) }

  Column(
      modifier = Modifier.fillMaxWidth().padding(INFO_SECTION_PADDING).testTag("infoSection"),
      verticalArrangement = Arrangement.spacedBy(INFO_SECTION_SPACING, Alignment.Top),
      horizontalAlignment = Alignment.Start) {
        // Catchphrase Section
        ProfileCatchPhrase(profile.catchPhrase)

        // Description Section
...

  Box(
      modifier =
          Modifier.fillMaxWidth()
              .aspectRatio(PROFILE_IMAGE_ASPECT_RATIO)
              .background(Color.LightGray)
              .testTag("profileHeader")) {

        // Profile image
        AsyncImage(
            model = profile.profilePictureUrl,
            contentDescription = "Profile Image",
            contentScale = ContentScale.Crop,
            modifier =
                Modifier.fillMaxSize()
                    .background(MaterialTheme.colorScheme.surfaceVariant, CircleShape)
                    .testTag("profilePicture"),
            placeholder = painterResource(id = R.drawable.nopp),
            error = painterResource(id = R.drawable.nopp))

        // Back button
        IconButton(
            onClick = { navigationActions.goBack() },
            modifier =
                Modifier.align(Alignment.TopStart)
                    .padding(PROFILE_IMAGE_PADDING)
                    .background(BUTTON_BG_GRADIENT, shape = CircleShape)
                    .testTag("goBackButton")) {
              Icon(
                  imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                  contentDescription = "Go Back",
                  tint = Color.White)
            }

...
              Text(
                  text = profile.name,
                  style = USERNAME_TEXT_STYLE,
                  modifier =
                      Modifier.align(Alignment.CenterStart)
                          .padding(horizontal = PADDING_STANDARD)
                          .testTag("username"))
            }
      }

  if (blockReportModal) {
    val configuration = LocalConfiguration.current
    val screenWidth = configuration.screenWidthDp.dp
...
      text = "«${catchPhrase}»",
      style = CATCHPHRASE_TEXT_STYLE,
      color = MaterialTheme.colorScheme.onSecondary,
      textAlign = TextAlign.Left,
      maxLines = 2,
      overflow = TextOverflow.Ellipsis,
      modifier = Modifier.testTag("catchPhrase"))
}

/**
 * Displays the profile's tags
 *
 * @param listOfTags the list of the profile's tags
 */
@Composable
fun TagsSection(listOfTags: List<Pair<String, Color>>) {
  Box(modifier = Modifier.fillMaxWidth().testTag("tagSection")) {
    RowOfTags(listOfTags, TagStyle())
  }
}

/**
 * Displays the profile's description
...
@Composable
fun ProfileDescription(description: String) {
  Text(
      text = description,
      style = CONTENT_TEXT_STYLE,
      color = MaterialTheme.colorScheme.onSecondary,
      modifier = Modifier.padding(vertical = DESCRIPTION_PADDING).testTag("profileDescription"))
}

@Composable
fun MessageWhenLoadingProfile(paddingValues: PaddingValues) {
  Box(
      modifier =
...
