...
  val inboxItems = profilesViewModel.inboxItems.collectAsState()
  val context = LocalContext.current
  val message = inboxItems.value[profile]?.first?.first
  val locationMessage = inboxItems.value[profile]?.first?.second ?: "null"
  val location = inboxItems.value[profile]?.second

  Scaffold(modifier = Modifier.fillMaxSize().testTag("NotificationProfileScreen")) { paddingValues
    ->
    if (isLoading) {
      MessageWhenLoadingProfile(paddingValues = paddingValues)
    } else if (profile?.fcmToken != null) {
      Column(horizontalAlignment = Alignment.CenterHorizontally) {
        ProfileHeader(
...
              .width((screenWidth.value * ACCEPT_DECLINE_BOX_WIDTH_FACTOR).dp)
              .padding(
                  start = ACCEPT_DECLINE_PADDING_START.dp,
                  end = ACCEPT_DECLINE_PADDING_END.dp,
                  top = ACCEPT_DECLINE_PADDING_TOP_BOTTOM.dp,
                  bottom = ACCEPT_DECLINE_PADDING_TOP_BOTTOM.dp)
              .testTag("Accept/DeclineBox")) {
        Column(
            modifier = Modifier.fillMaxSize(),
            verticalArrangement = Arrangement.Top,
            horizontalAlignment = Alignment.Start) {
              Text(
                  text = requestMessage,
...
                          fontSize = REQUEST_MESSAGE_FONT_SIZE.sp,
                          lineHeight = REQUEST_MESSAGE_LINE_HEIGHT.sp,
                          fontWeight = FontWeight(REQUEST_MESSAGE_FONT_WEIGHT),
                          color = Color.Black,
                          letterSpacing = REQUEST_MESSAGE_LETTER_SPACING.sp,
                      ),
                  modifier = Modifier.testTag("RequestMessage"))
              Spacer(modifier = Modifier.height(SPACER_HEIGHT.dp))
              Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.End) {
                IconButton(
                    onClick = onAcceptClick,
                    modifier =
                        Modifier.padding(ACCEPT_DECLINE_ICON_BUTTON_PADDING.dp)
                            .size(ACCEPT_DECLINE_ICON_BUTTON_SIZE.dp)
                            .clip(RoundedCornerShape(ACCEPT_DECLINE_ICON_BUTTON_ROUNDED.dp))
                            .background(Color(ACCEPT_DECLINE_ICON_BUTTON_COLOR))
                            .testTag("acceptButton")) {
                      Icon(
                          imageVector = Icons.Outlined.Check,
                          contentDescription = "Accept Request Button",
                          tint = Color.White)
                    }
                IconButton(
                    onClick = onDeclineClick,
                    modifier =
                        Modifier.padding(ACCEPT_DECLINE_ICON_BUTTON_PADDING.dp)
                            .size(ACCEPT_DECLINE_ICON_BUTTON_SIZE.dp)
                            .clip(RoundedCornerShape(ACCEPT_DECLINE_ICON_BUTTON_ROUNDED.dp))
                            .background(Color(ACCEPT_DECLINE_ICON_BUTTON_COLOR))
                            .testTag("declineButton")) {
                      Icon(
                          imageVector = Icons.Outlined.Close,
                          contentDescription = "Decline Request Button",
                          tint = Color.White)
                    }
                IconButton(
                    onClick = onLocationClick,
                    modifier =
                        Modifier.padding(ACCEPT_DECLINE_ICON_BUTTON_PADDING.dp)
                            .size(ACCEPT_DECLINE_ICON_BUTTON_SIZE.dp)
                            .clip(RoundedCornerShape(ACCEPT_DECLINE_ICON_BUTTON_ROUNDED.dp))
                            .background(Color(ACCEPT_DECLINE_ICON_BUTTON_COLOR))
                            .testTag("locationButton")) {
                      Icon(
                          imageVector = Icons.Outlined.LocationOn,
                          contentDescription = "Location Request Button",
                          tint = Color.White)
                    }
              }
...
