...
              }
        },
        dismissButton = { TextButton(onClick = { alertDialogSent = false }) { Text("No") } })
  }
  Scaffold(
      modifier = Modifier.testTag("notificationScreen"),
      topBar = { TopBar(stringResource(R.string.notifications_screen_title)) },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route ->
              if (route.route != Route.NOTIFICATIONS) {
                navigationActions.navigateTo(route)
              }
...
      verticalAlignment = Alignment.CenterVertically) {
        MeetingRequestButton(
            option = MeetingRequestOption.INBOX,
            isSelected = selectedOption == MeetingRequestOption.INBOX,
            onClick = { onOptionSelected(MeetingRequestOption.INBOX) },
            badgeCount = inboxSize,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("inboxButton"))

        MeetingRequestButton(
            option = MeetingRequestOption.SENT,
            isSelected = selectedOption == MeetingRequestOption.SENT,
            onClick = { onOptionSelected(MeetingRequestOption.SENT) },
            badgeCount = SENT_SIZE,
            modifier = Modifier.weight(MEETING_REQUEST_BUTTON_SIZE).testTag("sentButton"))
      }
}

@Composable
private fun MeetingRequestButton(
    option: MeetingRequestOption,
...
